Finish issue 'Menu SVG is behind things when scrolling'

--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -3,6 +3,8 @@
     position: fixed;
     top: 10px;
     left: 10px;
+    z-index: 1;
+
 }
 
 .nav-menu {
@@ -15,8 +17,8 @@
     transition: 850ms ease-in;
     color: #8F9295;
     font-size: 30px;
-    z-index: 1;
     box-shadow: 0px 0px 20px black;
+    z-index: 2;
 }
 .footerLinks {
     font-size: 1.5rem;
